# shunya

./: .clang-tidy  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  build.sh  lint.sh  package.xml  repositories.bzl  rundev.sh
.github/workflows/: build.yaml
axillary-node-manager/: axillary_node_manager.cc  chase_mode_state.cc  hibernate_state.cc  shutdown_state.cc  standby_state.cc  surveillance_mode_state.cc  wait_for_command_state.cc
axillary-node-manager/includes/: axillary_node_manager.h  chase_mode_state.h  hibernate_state.h  shutdown_state.h  standby_state.h  state.h  surveillance_mode_state.h  wait_for_command_state.h
axillary-node-manager/interfaces/: interfaces.h
axillary-node-manager/parameters/: parameters.h
axillary-node-manager/tests/: BUILD.bazel  test_axillary_node_manager.cc
bazel_rules/: cc_rules.bzl
bazel_utils/: template_expansion.bzl
cmake/: code_formatting_options.cmake
docker/: Dockerfile  build.sh
examples/: CMakeLists.txt
examples/basic/: BUILD.bazel  CMakeLists.txt  hello_world.cc
examples/basic/include/: hello_world.h
examples/basic/src/: hello_world.cc
examples/cuda/: BUILD.bazel  CMakeLists.txt  simple_example.cc  simple_example.cu  simple_example.h
examples/cuda/include/: simple_example.h
examples/cuda/src/: simple_example.cc  simple_example.cu
examples/ros2/: BUILD.bazel  rcutils_test.cc
examples/test/: BUILD.bazel
examples/tests/: CMakeLists.txt  simple_test.cc
requirements/: README.md  requirements.in  requirements.txt
src/axillary-node-manager/: BUILD.bazel  axillary_node_manager.cc  chase_mode_state.cc  hibernate_state.cc  shutdown_state.cc  standby_state.cc  surveillance_mode_state.cc  wait_for_command_state.cc
src/axillary-node-manager/includes/: axillary_node_manager.h  chase_mode_state.h  hibernate_state.h  shutdown_state.h  standby_state.h  state.h  surveillance_mode_state.h  wait_for_command_state.h
src/axillary-node-manager/interfaces/: interfaces.h
src/axillary-node-manager/parameters/: parameters.h
src/axillary-node-manager/tests/: BUILD.bazel  test_axillary_node_manager.cc
src/shunya_examples/: CMakeLists.txt  package.xml
src/shunya_examples/basic/: hello_world.h
tools/: download_datasets.py  lint_check.sh
