module(name = "i9axx_shunya")

bazel_dep(name = "rules_python", version = "0.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10.12",
)

use_repo(
    python,
    python_3_10 = "python_3_10_12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.10.12",
    requirements_lock = "//requirements:requirements.txt",
)

use_repo(pip, "pypi")


# rules_cuda
bazel_dep(name = "rules_cuda", version = "0.2.1")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

