# Example binary
load("//bazel_rules:cc_rules.bzl", "cc_binary_with_headers") 

cc_binary_with_headers(
    name = "hello_world",
    srcs = ["src/hello_world.cc"],  
    hdrs = ["include/hello_world.h"],  
    includes = ["include"],  
)

py_binary(
    name = "hello_world_py",
    srcs = ["scripts/hello_world.py"],
    main = "scripts/hello_world.py",
)