load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "simple_example_cc",
    srcs = ["src/simple_example.cc"],
    deps = [
        ":simple_example"
    ],
)

cuda_library(
    name = "simple_example",
    hdrs = ["include/simple_example.h"],
    srcs = ["src/simple_example.cu"],
)
